---------------------------------------------------------------------------------------------------
Version: 1.4.7

  Changes:
    - Pressured air reduced in silver-lead 01.
---------------------------------------------------------------------------------------------------
Version: 1.4.6

  Balances:
    - Balacing copper sintered-to-molten.
    - Reduced crafting time in Cu solution.
    - Added Coarse coal to coal recipe.
---------------------------------------------------------------------------------------------------
Version: 1.4.5

  Balances:
    - Balacing copper chain.
---------------------------------------------------------------------------------------------------
Version: 1.4.4

  Balances:
    - Fixed firearm magazine recipe.
---------------------------------------------------------------------------------------------------
Version: 1.4.3

  Balances:
    - Fixed the last update.
---------------------------------------------------------------------------------------------------
Version: 1.4.2

  Balances:
    - mega mines now unlocked with science 3.
---------------------------------------------------------------------------------------------------
Version: 1.4.1

  Balances:
    - Added new graphics for ores OOPS.
---------------------------------------------------------------------------------------------------
Version: 1.4.0

  Balances:
    - Added new graphics for ores.
    - reduced HCl from boron.
---------------------------------------------------------------------------------------------------
Version: 1.3.9

  Bug fixes:
    - Fixed Nexelit chain.
---------------------------------------------------------------------------------------------------
Version: 1.3.8

  Balances:
    - Balanced Nexelit chain.
    - Improved mega-drill head value.
    - Reduced requierements for mega mines, they now requieres production science, blue, green and red only.