@@ -1,6 +1,6 @@
 {
   "name": "pyrawores",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "factorio_version": "0.17",
   "title": "Pyanodons Raw Ores",
   "author": "Pyanodon, Nexela, Kingarthur",
