@@ -3,6 +3,7 @@ Version: 1.4.7
 
   Changes:
     - Pressured air reduced in silver-lead 01.
+    - Increased nitrogen from cold-air.
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.6
 
